# razai-tui

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
docs/: architecture.md  database.md  pdf-windows-integration.md  skills.md
docs/ShopeeDocs/: SHOPEE_CRIAR_ANUNCIO_BR.md  SHOPEE_ENDPOINTS_BR.md  SHOPEE_ESTOQUE_SKU.md  shopee-push-mechanism-docs.md
migrations/: 001_create_base_tables.sql  002_add_tecido_select_fields.sql  003_add_cor_sku.sql  004_add_vinculo_sku.sql  005_create_configuracoes.sql  006_create_estampas.sql  007_create_vendas.sql  008_create_pedidos.sql  009_add_vinculo_images.sql  010_add_tecido_custo_base.sql  011_add_vinculo_custo_override.sql  012_add_lista_precos_venda.sql
src/: agent.rs  app.rs  db.rs  main.rs  models.rs  shopee.rs  ui.rs
src/app/: agent_actions.rs  background.rs  configuracoes.rs  dados.rs  date_picker.rs  documentos.rs  estoque.rs  pdf_actions.rs  pedidos.rs  vendas.rs
src/app/dados/: navigation.rs
src/app/documentos/: pdf.rs
src/app/pedidos/: pdf.rs
src/app/vendas/: history.rs  receipt.rs
src/db/: orders.rs  sales.rs  stock.rs
src/models/: core.rs  sku.rs
src/screens/: chrome.rs  configuracoes.rs  dados.rs  date_picker.rs  documentos.rs  estoque.rs  mod.rs  pedidos.rs  shopee.rs  vendas.rs
src/screens/dados/: forms.rs
