[package]
name = "razai-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
dotenvy = "0.15.7"
printpdf = { version = "0.9.1", default-features = false, features = ["text_layout"] }
ratatui = "0.30.0"
reqwest = { version = "0.13.3", features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "bigdecimal", "chrono"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
