[package]
name = "razai-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
dotenvy = "0.15.7"
hex = "0.4.3"
hmac = "0.12.1"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "webp", "gif", "bmp"] }
printpdf = { version = "0.9.1", default-features = false, features = ["text_layout"] }
ratatui = "0.30.0"
ratatui-image = { version = "11.0.2", default-features = false, features = ["crossterm"] }
reqwest = { version = "0.13.3", features = ["blocking", "json", "multipart", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "bigdecimal", "chrono"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
